iFeature Pro Changelog

****************************

Version 4.0.4 (02-16-12)
-Adjustment to Foundation JS calls to fix further plugin conflicts.
-Added Layout options.
-Minor Theme Options copy adjustments.
-Featured Image option available for Archive and Single templates.

Version 4.0.3 (02-13-12)
-Added NivoSlider option.
-Removed "width" element from slider images. 
-Fixed description color option.
-Searchform in nav now has separate style from widget. 
-Smaller home button.
-Smaller slider thumbs for iPhone size.
-jQuery no-conflict fix for better plugin compatibility. 
-Adjustment to mobile menu JS to fix conflict bug.
-Fixed color scheme bug. 
-Removed slider timer. 
-Added Custom Header Scripts option.
-Added full-width Icons header section.
-Added Custom Header Element.

Version 4.0.2 (02-09-12)
-Better handling of slider responsive breaking point widths (fixes FireFox bug).
-Fixed default afterfooter menu item spacing.
-Fixed five slide limit for sliders using blog posts.
-Fixed search widget style issue. 
-Added body text color option.
-Further revision to slider arrows.
-Fixed slider loading screen.
-Added default styling for Disqus comment system.
-Moved responsive-only styling out of general stylesheet to fix issues with static design.
-Several tweaks to both responsive and static design elements.

Version 4.0.1 (02-06-12)
-Fixed custom slide category bug for pages.
-Fixed slider thumbs not displaying on blog index. 
-Fixed postbar bug on single pages.
-Fixed default social icons bug.
-Replaced slider arrows with previous style.
-Added option to disable slider timer.
-Fixed media embed CSS bug.
-Various responsive design style tweaks.

Version 4.0 (02-03-12)
-Added Foundation CSS grid, offering both responsive and static design.
-Drag and Drop Header and Blog elements added.
-Added WordPress Template Options (404, Search, Archive, Single)
-Replaced NivoSlider with Orbit.
-Added new responsive Carousel.
-Added Left-Sidebar option.
-New design options.