@@ -1,5 +1,7 @@
 /* Page Elements */
 
+#orbitDemo {border: 1px solid #ccc;}
+
 /*============================*/
 /*===== Nivo Slider ======*/
 /*============================*/
