@@ -53,6 +53,8 @@ a{outline:none}
 	border-radius: 4px;
 }
 
+.caption_title {font-size:16px;}
+
 /* Fonts  */
 
 .meta {color: #989898;font-size: 12px;font-weight: 500;padding-bottom: 10px;}
