@@ -7,6 +7,7 @@ Version 4.0.4 (02-16-12)
 -Added Layout options.
 -Minor Theme Options copy adjustments.
 -Featured Image option available for Archive and Single templates.
+-Added .caption_title and .caption_text classes for slider caption text.
 
 Version 4.0.3 (02-13-12)
 -Added NivoSlider option.
